--- a/src/lib/data/projects.json
+++ b/src/lib/data/projects.json
@@ -6,7 +6,7 @@
 		"tags": ["C#", "Unity"],
 		"overview": "Ambitious roguelike built in Unity",
 		"imageUrl": "morbent-manor.png",
-		"description": "Morbent Manor is a dungeon-crawling roguelike that I built in Unity as part of my master's dissertation, achieving a first class grade of 80%. \n The game features procedurally generated levels, a variety of enemies, and explores a unique MOBA-style combat system. I also created and animated many custom assets using Aseprite and Unity's robust state machine system. \n The game is available to play as a demo on itch.io. If you would like to learn more about the game, read my dissertation or look at the source code, please feel free to contact me.",
+		"description": "Morbent Manor is a dungeon-crawling roguelike that I built in Unity as part of my master's dissertation, achieving a first class grade of 80%. \n The game features procedurally generated levels, a variety of items and enemies, and explores a unique MOBA-style combat system. I also created many custom assets using Aseprite and animated them using Unity's state machine system. \n The game is available to play as a demo on itch.io. If you would like to learn more about the game, read my dissertation or look at the source code, please feel free to contact me.",
 		"buttons": [
 			{ "text": "Play", "link": "https://jacksonl22.itch.io/morbent-manor" },
 			{ "text": "Contact", "link": "#contact" }
@@ -44,7 +44,7 @@
 		"date": "11-2021",
 		"tags": ["C++", "SDL2", "GLM"],
 		"overview": "Rendering engine built in C++ with SDL2 and GLM",
-		"imageUrl": "i18.bmp",
+		"imageUrl": "rendering-engine.png",
 		"description": "A rendering engine created from scratch using C++, with SDL2 for drawing to screen and GLM to assist with vector and matrix operations. \n The engine features some basic implementations of rendering techniques used by modern renderers including rasterization, ray tracing, phong shading and more.",
 		"buttons": [{ "text": "GitHub", "link": "https://github.com/JacksonLawrence1/CG2021" }]
 	},
@@ -68,7 +68,7 @@
 		"date": "06-2024",
 		"overview": "Accurate Movie recommendations, built using Go",
 		"imageUrl": "letterboxd-rec.png",
-		"description": "Letterboxd Rec is a tool to help provide accurate movie recommendations based on Letterboxd favourites. \n When provided a single movie, the tool uses a web scraper to concurrently gather data from users who hold the movie highly, i.e. in their 'top 4' favourites. \n Built using a Go HTTP server, with htmx to perform AJAX requests, I wanted to explore the performance using a non-JavaScript framework for web development.",
+		"description": "An accurate movie recommendation tool based on users' favourite movies on the social media app, Letterboxd. \n Provided a movie, the tool scrapes letterboxd data concurrently and gathers information from users who hold the movie highly, i.e. in their 'top 4'. \n I wanted to experiment building an application using non-JavaScript based libraries, and see how it could improve performance; opting for Go for its concurrent capabilities and web servers, as well as htmx to perform AJAX requests.",
 		"buttons": [{ "text": "GitHub", "link": "https://github.com/JacksonLawrence1/letterboxd-rec" }]
 	},
 	{
@@ -78,7 +78,7 @@
 		"tags": ["Python", "AWS"],
 		"overview": "Rendering farm for Blender built with AWS",
 		"imageUrl": "blender-farm.png",
-		"description": "A tool to help speed up the process of rendering Blender projects using AWS instances. \n Using EC2 instances as workers, the tool splits work so blender files can be rendered distributively. Includes options to render portions of files, and even includes a 'chaos testing' mode to simulate how the tool perseveres through heavy failure/load.",
+		"description": "A tool to help speed up the process of rendering Blender projects using AWS instances. \n Using EC2 instances as workers, the tool splits work so blender files can be rendered distributively. Includes options to render portions of files, and even includes a 'chaos testing' mode to simulate how the tool perseveres through heavy load/failure.",
 		"buttons": [
 			{ "text": "GitHub", "link": "https://github.com/JacksonLawrence1/aws-blender-farm" }
 		]
@@ -125,7 +125,7 @@
 		"id": "rep-buddy",
 		"name": "Rep Buddy",
 		"date": "08-2024",
-		"tags": ["React", "React Native", "TypeScript"],
+		"tags": ["Expo", "React Native", "TypeScript"],
 		"overview": "Native Workout history and management app",
 		"imageUrl": "rep-buddy.png",
 		"description": "A native workout management app allowing users to track their workout history, creating templates of custom workouts and exercises. This includes the a detailed workout history with exercise weight used, and the number of reps completed. \n Built using React Native and TypeScript, I am aiming to release it soon for Android on the Google Play Store.",
